--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
       <ion-route url="/regUsuario" component="page-registroUsuario"></ion-route>
       <ion-route url="/regActividades" component="page-actividades"></ion-route>      
     </ion-router>
-    <ion-nav id="nav"> </ion-nav> <!--Stack de navegación-->
+    <ion-nav id="nav"></ion-nav> <!--Stack de navegación-->
 
     <!--Menu-->
     <ion-menu content-id="main" id="menu">
@@ -57,8 +57,8 @@
         <ion-list>
           <!--Usuario-->
           <ion-item>
-            <ion-input label="Ingrese mail de usuario" label-placement="floating" clear-input="true" id="txtLoginMail"
-              placeholder="Ingrese su mail">              
+            <ion-input label="Ingrese usuario" label-placement="floating" clear-input="true" id="txtLoginMail"
+              placeholder="Ingrese usuario">              
             </ion-input>
             <ion-icon name="mail-outline" color="success"></ion-icon>            
           </ion-item>
