cambios en menú y funciones de mostrar pantallas

--- a/www/index.html
+++ b/www/index.html
@@ -236,6 +236,18 @@
       <!--Pantalla ver actividades-->
 
       <page-ver-actividades class="ion-page" id="verActividades">
+        <ion-header>
+          <ion-toolbar color="medium">
+            <ion-buttons slot="start">
+              <ion-menu-button></ion-menu-button>
+            </ion-buttons>
+            <ion-title>Ver Actividades</ion-title>
+          </ion-toolbar>
+        </ion-header>
+        <ion-content>
+          pantalla de actividades
+          <div id="divAct"></div>
+        </ion-content>
       </page-ver-actividades>
 
       <!--Pantalla Ver usuarios-->
