arreglando search y otros

--- a/www/index.html
+++ b/www/index.html
@@ -331,7 +331,7 @@
           </ion-toolbar>
         </ion-header>
         <ion-content>
-          <div id="divDetalleProducto"></div>
+          <div id="divDetalleAct"></div>
           <ion-button
             id="btnDetalleActividadVolver"
             expand="block"
