combo paises en registro y clase pais

--- a/www/index.html
+++ b/www/index.html
@@ -204,13 +204,10 @@
             </ion-item>
             <!--país-->
             <ion-item>
-              <ion-input
-                label="Ingrese país de residencia"
-                label-placement="floating"
-                clear-input="true"
-                id="txtPaisIngresado"
-                placeholder="Pais"
-              >
+              <ion-select
+                  placeholder="Seleccionar País"
+                  id="selectorPaís"
+                ></ion-select>
               </ion-input>
               <ion-icon name="earth-outline"></ion-icon>
             </ion-item>
