--- a/www/index.html
+++ b/www/index.html
@@ -313,7 +313,7 @@
         </ion-header>
         <ion-content>
           <ion-searchbar
-            id="txtProductosFiltro"
+            id="txtActFiltro"
             placeholder="Buscar"
           ></ion-searchbar>
           <div id="divAct"></div>
@@ -327,7 +327,7 @@
             <ion-buttons slot="start">
               <ion-menu-button></ion-menu-button>
             </ion-buttons>
-            <ion-title>Detalle de producto</ion-title>
+            <ion-title>Detalle de actividad</ion-title>
           </ion-toolbar>
         </ion-header>
         <ion-content>
