--- a/www/index.html
+++ b/www/index.html
@@ -4,20 +4,7 @@
     <link rel="icon" href="data:," />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Título</title>
-    <!--Mapa-->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-      crossorigin=""
-    />
-    <script
-      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-      crossorigin=""
-    ></script>
-
+    <title>App Actividades</title>
     <!--Ionic-->
     <script
       type="module"
@@ -31,6 +18,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"
     />
+    <!--Mapa-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+      crossorigin=""
+    ></script>
   </head>
   <body>
     <ion-app
@@ -63,7 +57,7 @@
       <ion-menu content-id="main" id="menu">
         <ion-header>
           <ion-toolbar color="warning">
-            <ion-title><strong>Menu</strong></ion-title>
+            <ion-title><strong><u>Menu</u></strong></ion-title>
           </ion-toolbar>
         </ion-header>
         <ion-content class="ion-padding">
@@ -345,11 +339,11 @@
       <!--Pantalla Ver usuario en mapa-->
       <page-verUsuarios class="ion-page" id="verUsuarios">
         <ion-header>
-          <ion-toolbar color="medium">
+          <ion-toolbar color="light">
             <ion-buttons slot="start">
               <ion-menu-button></ion-menu-button>
             </ion-buttons>
-            <ion-title>Mapa usuario</ion-title>
+            <ion-title color="success">Mapa usuario</ion-title>
           </ion-toolbar>
         </ion-header>
         <ion-content>
