--- a/www/index.html
+++ b/www/index.html
@@ -172,13 +172,13 @@
           <ion-list>
             <ion-item>
               <ion-input
-                label="Ingrese mail de usuario"
+                label="Ingrese nombre de usuario"
                 label-placement="floating"
                 clear-input="true"
                 id="txtNombreRegistro"
-                placeholder="Ingrese su mail"
+                placeholder="Ingrese su Usuario"
               ></ion-input>
-              <ion-icon name="mail-outline"></ion-icon>
+              <ion-icon name="person-circle-outline"></ion-icon>
             </ion-item>
             <!--pass-->
             <ion-item>
@@ -315,6 +315,7 @@
         </ion-content>
       </page-verActividades>
 
+      <!--Pantalla Detalle de Actividades--> 
       <page-detalleActividad class="ion-page" id="verDetalleActividad">
         <ion-header>
           <ion-toolbar color="warning">
@@ -346,7 +347,8 @@
             <ion-title color="success">Mapa usuario</ion-title>
           </ion-toolbar>
         </ion-header>
-        <ion-content>
+        <ion-content>          
+        <br>
           <div id="miMapa" style="height: 300px"></div>
         </ion-content>
       </page-verUsuarios>
